# antlr_playground

./: .gitignore  .gitmodules  README.md  build_antlr4_parser.py  llm_evaluation.py  requirements.txt
jinja_templates/: CMakeLists.txt  main.cpp
mini/cpp/: MINIBaseListener.cpp  MINIBaseListener.h  MINILexer.interp  MINILexer.tokens  MINIParser.cpp  MINIParser.h
targets/json/: CMakeLists.txt  main.cpp
targets/mini/: MINI.g4
targets/mini/cpp/: MINI.interp  MINILexer.cpp  MINILexer.h  MINIListener.cpp  MINIListener.h
targets/url/: CMakeLists.txt  compile.sh  main.cpp
targets/url/python/: url.tokens  urlListener.py
url/: CMakeLists.txt  driver.py  generate.sh  input.txt  main.cpp  url.g4
url/python/: url.interp  urlLexer.py  urlParser.py
